tests/fixtures/invalid/bytes_mul_none.py
# Cannot multiply Bytes and None
x: bytes = b"hello" * None
